--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   "compilerOtions": {
     "baseUrl": "./src"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "devDependencies": {
     "react-error-overlay": "6.0.9"
   }
