--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "ipfs-api": "^26.1.2",
+    "ipfs-http-client": "^60.0.0",
+    "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
@@ -19,7 +29,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
