--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "dependencies": {
     "@iconify/react": "^4.1.0",
+    "@metaplex/js": "^4.12.0",
     "@pinata/sdk": "^2.1.0",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.2",
+    "@solana/wallet-adapter-base": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.30",
+    "@solana/wallet-adapter-react-ui": "^0.9.29",
+    "@solana/wallet-adapter-wallets": "^0.19.15",
+    "@solana/wallet-base": "^0.0.1",
+    "@solana/web3.js": "^1.73.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
