--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@iconify/react": "^4.1.0",
     "@metaplex/js": "^4.12.0",
     "@pinata/sdk": "^2.1.0",
@@ -20,9 +21,12 @@
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
+    "core-js": "^3.29.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "downloadjs": "^1.4.7",
     "express": "^4.18.2",
+    "fastfile": "^0.0.20",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "ipfs-api": "^26.1.2",
@@ -30,14 +34,17 @@
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
+    "on": "^1.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.3",
+    "readline": "^1.3.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "snarkjs": "^0.6.7",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.4.0"
   },
@@ -45,7 +52,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://yourd --profile=0xcatbox"
   },
   "eslintConfig": {
     "extends": [
@@ -55,9 +63,11 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
