--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "yourd",
   "version": "0.1.0",
-  "private": true,
+  "private": "true",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@iconify/react": "^4.1.0",
@@ -24,7 +25,6 @@
     "core-js": "^3.29.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "downloadjs": "^1.4.7",
     "express": "^4.18.2",
     "fastfile": "^0.0.20",
     "form-data": "^4.0.0",
@@ -34,17 +34,15 @@
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
-    "on": "^1.3.0",
     "path-browserify": "^1.0.1",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.3",
-    "readline": "^1.3.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "snarkjs": "^0.6.7",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.4.0"
   },
@@ -77,11 +75,5 @@
   },
   "compilerOtions": {
     "baseUrl": "./src"
-  },
-  "resolutions": {
-    "react-error-overlay": "6.0.9"
-  },
-  "devDependencies": {
-    "react-error-overlay": "6.0.9"
   }
 }
