--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
@@ -38,13 +39,16 @@
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4",
-    "web3.storage": "^4.4.0"
+    "web3.storage": "^4.4.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
